--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+#??????
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#url: jdbc:sqlserver://ip??:??;DatabaseName=????
+spring.datasource.url=103.45.100.24:1433;DatabaseName=?????
+spring.datasource.username=
+spring.datasource.password=
+
+
+
+#???????sql
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+# mybatis ????????,?????
+#mybatis.configuration.mapUnderscoreToCamelCase=true
+mybatis.configuration.map-underscore-to-camel-case=true
+#????
+mybatis.mapper-locations=classpath:mapper/*.xml
+#??xml?????
+mybatis.type-aliases-package=cn.fxmpay.software.model
+
 
