--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,21 @@
-#??????
+#数据库配置
+spring.jpa.database=sql_server
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#url: jdbc:sqlserver://ip??:??;DatabaseName=????
-spring.datasource.url=103.45.100.24:1433;DatabaseName=?????
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://103.45.100.24:1433;DatabaseName=software
+spring.datasource.username=sa
+spring.datasource.password=zjfjiayou888
 
 
 
-#???????sql
+#开启控制台打印sql
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-# mybatis ????????,?????
+# mybatis 下划线转驼峰配置,两者都可以
 #mybatis.configuration.mapUnderscoreToCamelCase=true
 mybatis.configuration.map-underscore-to-camel-case=true
-#????
+#配置扫描
 mybatis.mapper-locations=classpath:mapper/*.xml
-#??xml?????
+#配置xml的结果别名
 mybatis.type-aliases-package=cn.fxmpay.software.model
 
 
